--- a/.github/workflows/wiki-ci.yml
+++ b/.github/workflows/wiki-ci.yml
@@ -18,6 +18,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pip-tools
           pip-sync requirements.txt dev-requirements.txt
+      - name: run pytest unit tests
+        run: |
+          pytest
       - name: run linting with pylint
         run : |
           pylint encyclopedia
